# GoF-Patterns

./: .gitignore
Behavioral/Command/: command.cpp
Behavioral/Mediator/chatRoomMediator/: CMakeLists.txt
Behavioral/Mediator/chatRoomMediator/include/: chatRoom.h  user.h
Behavioral/Mediator/chatRoomMediator/src/: chatRoom.cpp  main.cpp  user.cpp
Behavioral/Observer/: observerSubscriber.cpp  observerSubscriber.sln  observerSubscriber.vcxproj  observerSubscriber.vcxproj.filters
Behavioral/Observer/onlineShopObserver/: CMakeLists.txt
Behavioral/Observer/onlineShopObserver/include/: discountSubscriber.h  newProductSubscriber.h  observer.h  onlineStore.h  orderStatusSubscriber.h  product.h  subject.h
Behavioral/Observer/onlineShopObserver/src/: discountSubscriber.cpp  main.cpp  newProductSubscriber.cpp  onlineStore.cpp  orderStatusSubscriber.cpp  product.cpp
Behavioral/Strategy/: strategy.cpp
Behavioral/Strategy/paymentStrategy/: CMakeLists.txt
Behavioral/Strategy/paymentStrategy/include/: IPaymentStrategy.h  creditCardPayment.h  cryptoPayment.h  payPalPayment.h  paymentContext.h
Behavioral/Strategy/paymentStrategy/src/: creditCardPayment.cpp  cryptoPayment.cpp  main.cpp  payPalPayment.cpp  paymentContext.cpp
